# Blockchain

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
backend/: address_views.py  block_views.py  chain_views.py  crud.py  dependencies.py  lifespan.py  main.py  schemas.py  transaction_views.py
backend/core/: config.py  models.py
backend/src/auth/: jwthandler.py  users.py
backend/src/bchain/: __init__.py  block.py  chain.py  constants.py  transaction.py
backend/src/bchain/tests/: test_block.py  test_blockchain.py  test_transaction.py
backend/src/crud/: users.py
backend/src/database/: config.py  models.py
backend/src/routes/: users.py
backend/src/schemas/: users.py
backend/tests/: test_blockchain.py
backend/views/: __init__.py  address_views.py  block_views.py  chain_views.py  transaction_views.py
blockchain/: main.py
blockchain/src/bchain/: pyproject.toml  transaction.py
blockchain/tests/: test_transaction.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: HelloWorld.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: AboutView.vue  BlockbaseView.vue  HomeView.vue  LoginView.vue  ProfileView.vue  RegisterView.vue  TransactionsView.vue
migrations/models/: 1_20231126160213_None.py
