[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blockchain"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standart"], version = "^0.23.2"}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
tox-poetry = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
